// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css-modules-dts-loader Basic Functionality should generate .d.ts file for CSS modules 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "validClass": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader Basic Functionality should handle empty CSS files 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader Options: camelCase should convert kebab-case class names to camelCase 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader Options: indentStyle and indentSize should use custom space indentation size when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
    "testClass": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader Options: indentStyle and indentSize should use tabs for indentation when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
	"testClass": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader Options: quote should use single quotes when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'testClass': string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader Options: sort should sort class names alphabetically when enabled 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "alpha": string;
  "beta": string;
  "zebra": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;
